[COLLECTIONS-878] PoC reflection test for MapUtils.invertMap improvement